--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "sass": "^1.79.4",
     "svelte": "^4.2.19",
+    "svelte-preprocess": "^6.0.3",
     "vite": "^5.4.8"
+  },
+  "dependencies": {
+    "svelte-icons": "^2.1.0"
   }
 }
